--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
           name="password"
           [(ngModel)]="model.password"
           class="form-control me-2" 
-          type="password" 
+          type="text" 
           placeholder="Password">
           <button class="btn btn-success" type="submit">Login</button>
         </form>
